# rosqlite

./: README.md  index.html  package.json  pnpm-lock.yaml  rome.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: release.yaml
src/: app.tsx  main.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: OpenFileButton.tsx  button.tsx  select.tsx  table.tsx
src/components/ui/: button.tsx
src/hooks/: use-pagination-range.ts
src/routes/: _index.tsx  app.$table.$tab.tsx  app.+shared._index.tsx  app.database.$table.tsx  app.database.tsx  app.editor.$table.tsx  app.editor.tsx  app.tsx
src/services/: db.ts
src/stores/: file.ts  router.ts
src/utils/: recent-file.ts  rows-per-page.ts
